diss: jstp concluding remarks, boratynska citations fixed

--- a/jstp.tex
+++ b/jstp.tex
@@ -941,9 +941,54 @@ tend the more to the sample mean the larger the sample gets.
 
 
 \subsection{Concluding remarks}
+\label{sec:6-gw-071216}
+
+***change it or leave it? draw links to other chapters and sections?***
+
+In this ***paper*** we considered generalized Bayesian inference
+in a wide class of imprecise probability models. We first
+demonstrated that, in their originally proposed form, these models
+do not react to prior-data conflict and so do not utilize
+the full expressive power of imprecise probabilities. We
+extended these models such that the natural relationship between
+knowledge and imprecision is reestablished: the higher the
+discrepancy between prior assumptions and sample observations the
+more cautious the posterior inference. We compare the previous
+modelling and our extension in two running examples covering two
+widely used situations, inference from a scaled normal and
+from a multinomial distribution, corroborating that our extension
+shows promising behavior.
+
+Further research will start with a more detailed study of
+the behavior of the proposed model, also taking into consideration
+that it may have some problems with dealing with very extreme
+degrees of conflict. Then careful attention should also be paid to
+other approaches for generalized Bayesian inference in exponential
+families \parencite{1993:coolen, 1997:boratynska} under prior data
+conflict, as well as to a thorough comparison of the inference
+developed here with the discretization-based models considered by
+\textcite{2005:whitcomb}, and with the approaches of \textcite{1991:pericchi}
+and \textcite{1994:coolen}, who use different prior classes.
+
+Far beyond these further developments, it should well be
+remembered that this ***paper*** consciously confined the whole
+argumentation to a certain Bayesian setting: we studied how far
+one can go \emph{if} one relies strictly on the generalized Bayes
+rule, transferring sets of priors to sets of posteriors element by
+element via Bayes rule. Alternative learning
+rules, including the approaches enumerated at Section~***paper intro*** %\ref{sec:intro},
+could prove very important as, to use one of the referees'
+felicitous words, ``Bayesian methods cannot allow for surprise, the same is
+true for robustified or generalized Bayesian methods, although these
+may hide this shortcoming better. One could argue, therefore, that
+they cannot be used to represent learning.''
+
+\subsection*{Acknowledgements}
+We would like to thank two anonymous referees for their very stimulating comments.
 
 
-\clearpage
+
+%\clearpage
 
 
 \section{***Software***}
