--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -106,12 +106,12 @@ Special imprecise probability models are now obtained by specific choices of $\P
 We distinguish the following types of models:
 \begin{enumerate}[(a)]
 \item $\nz$ is fixed, while $\yz$ varies in a set $\YZ$.\\
+\label{enum:modeltypes-a}%
 The IDM \parencite{1996:walley::idm},
 as well as its generalisation to all sample distributions of the canonical exponential form \eqref{eq:expofam-sampledens}
 by \textcite{2005:quaeghebeurcooman} are of this type.
-The approach by \textcite{1997:Boratynska} also belongs to this category,
+The approach by \textcite{1997:boratynska} also belongs to this category,
 as she specifies bounds for $\nz \yz$ while holding $\nz$ constant \parencite[see][p.~1973]{2012:benavolizaffalon}.
-\label{enum:modeltypes-a}
 \item $\nz$ varies in a set $\NZ$, while $\yz$ is fixed.\\
 \label{enum:varyn}%
 This type of model is rarely discussed in the literature,
