diss: *zation -> *sation etc in jstp

--- a/defs.tex
+++ b/defs.tex
@@ -5,7 +5,7 @@
 \def\pdc{prior-data conflict}
 \def\model{LUCK-model}
 \def\ymodel{iLUCK-model}
-\def\nymodel{generalized iLUCK-model}
+\def\nymodel{generalised iLUCK-model}
 
 \def\tra{\ensuremath{{\mbox{\!\scriptsize\textsf{T}}}}}
 \def\com{\ensuremath{{\mbox{\!\scriptsize\textsf{C}}}}}
