diss: fewer open ends at beginning of cha 2

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -4,7 +4,7 @@
 \begin{itemize}
 %\item Short introduction to IP (sets of priors, lower/upper prevision/probability)
 %\item motivate imprecise priors with ress paper: \cite{Troffaes2013a} --- now in intro
-\item \pdc\ (Evans \& Moshonov, Fuquene-Cook-Pericchi), examples (Festschrift paper: \cite{Walter2010a})
+\item \pdc\ (Evans \& Moshonov, Fuquene-Cook-Pericchi) somewhere???*** %, examples (Festschrift paper: \cite{Walter2010a})
 %\item further motivations for IP (ITIP chapter \cite{itip-statinf}) 
 %\item Generalized Bayesian inference
 %\item Generalized Bayesian inference with sets of priors
@@ -14,8 +14,8 @@
 % \item parameter set shapes
 % \end{itemize}
 %\item IDM
-\item JSTP paper \cite{Walter2009a}
-\item isipta11 paper \cite{Walter2011a}
+%\item JSTP paper \cite{Walter2009a}
+%\item isipta11 paper \cite{Walter2011a}
 \item boatshape?
 \end{itemize}
 
