diss: isipta11 framework

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -464,6 +464,7 @@ because lower and upper previsions derived from $\mathcal{M}$ are nevertheless c
 %itip sec.3.2.2, 3.3.3
 
 \subsubsection{Conditioning and the Generalised Bayes' Rule}
+\label{sec:gbr}
 
 To use imprecise probability distributions for statistical inference
 in the same way as usual Bayesian inference employs precise probability distributions,
