--- a/intro.tex
+++ b/intro.tex
@@ -52,7 +52,9 @@ with a slight change of notation towards the one introduced in Section~\ref{sec:
 (most importantly, writing $\nn$ and $\yn$ for the canonical posterior parameters
 instead of $n^{(1)}$ and $y^{(1)}$, respectively).***
 
-***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a}.***
+***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a},
+again with  aslight change of notation for consistency with the rest of the material.
+Specifically, the success probability in Bernoulli trials is denoted by $\theta$ instead of $p$.***
 
 \section{Notation}
 \label{sec:notation}
