--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -29,6 +29,8 @@ Section **** another attempt to refine ****ISIPTA'11***
 
 ***structure of section: here comes the important part!****
 
+***check refs to own papers included in diss are to be switched to diss sections*** 
+
 \subsection{The General Framework}
 %\subsection{The Basic Setting}
 \label{sec:basicsetting}
